--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: Tanishka Kohli
-
+theme: jekyll-theme-minimal
 # Short bio or description (displayed in the header)
 description: Programmer 
 
